--- a/views/index.ejs
+++ b/views/index.ejs
@@ -452,36 +452,39 @@
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 5rem">
+                  <div class="row" style="margin-bottom: 5rem">
                     <div class="col-lg-12">
-                        <form name="sentMessage" id="contactForm" method="post" action="/contact">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="clearfix"></div>
-                                <div class="col-lg-12 text-center">
-                                    <div id="success"></div>
-                                    <button type="submit" class="btn btn-xl btn-primary" value="Contact">Send Message</button>
-                                </div>
+                      <form name="sentMessage" id="contactForm" method="post" action="/contact">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Your Name *" name="name" required data-validation-required-message="Please enter your name.">
+                              <p class="help-block text-danger"></p>
                             </div>
-                        </form>
+                            <div class="form-group">
+                              <input type="email" class="form-control" placeholder="Your Email *" name="email" required data-validation-required-message="Please enter your email address.">
+                              <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group">
+                              <input type="tel" class="form-control" placeholder="Your Phone *" name="phone" required data-validation-required-message="Please enter your phone number.">
+                              <p class="help-block text-danger"></p>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <textarea class="form-control" placeholder="Your Message *" name="message" required data-validation-required-message="Please enter a message."></textarea>
+                              <p class="help-block text-danger"></p>
+                            </div>
+                          </div>
+                          <div class="clearfix"></div>
+                          <div class="col-lg-12 text-center">
+                            <div id="success"></div>
+                            <button type="submit" class="btn btn-xl btn-primary" value="Contact">Send Message</button>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                     </div>
                 </div>
             </div>
