--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Login</title>
+    <title><%= title %> - Login</title>
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
