--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,8 +4,11 @@
 }*/
 
 /***********General styles*******************/
+
 body{
 	overflow-x: hidden;
+  scrollbar-face-color: #708090;
+  scrollbar-track-color: #b8c0c8;
 }
 a {
   color: #00B7FF;
@@ -23,6 +26,25 @@ nav{
 	margin-top: 10rem;
 }
 
+/*custom scrollbar*/
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #708090;
+}
+
+::-webkit-scrollbar-track {
+  background: #b8c0c8;
+}
+
+::-webkit-resizer {
+  background: #ECF0F3;
+}
+
+/*Material design box-shadow effect*/
 .z-depth-1 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -32,6 +54,9 @@ nav{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+
+
+/***********Login/signup styles*******************/
 
 .row.login-container:after,
 .row.signup-container:after
@@ -61,14 +86,18 @@ nav{
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(233, 102, 102, 0.6);
 }
 
-/*
-.form-control:focus {}
-*/
-
 .bad-tooltip + .tooltip > .tooltip-inner {background-color: #F33232;}
 .bad-tooltip + .tooltip > .tooltip-arrow {border-top-color: #F33232;}
 
+/********************Filtering routes styles********************/
+textarea.json-append{
+  width: 100%;
+  height: 10rem;
+  max-width: 100%;
+}
 
+
+/*Media queries*/
 /******Navbar styling********************************/
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
