--- a/views/solvedTasksFiltering.ejs
+++ b/views/solvedTasksFiltering.ejs
@@ -10,6 +10,7 @@
         form{
             margin-top: 3rem;
         }
+        
     </style>
 </head>
 <body>
@@ -20,22 +21,26 @@
         <div class="panel panel-default">
             <form class="panel-body" method="post" action="/datafiltering/solvedTasksFilter">
 
-                    <label>name:</label>
+                    <label>Name:</label>
                     <input type = "text" class = "form-control inlined-element" name="task_name" placeholder = "Enter name">
 
                     <label>hasSolution:</label>
                     <input type = "text" class = "form-control inlined-element" name="hasSolution" placeholder = "Enter SolEx">
 
-                    <label>date1:</label>
+                    <label>Date 1:</label>
                     <input type = "text" class = "form-control inlined-element" name="date1" placeholder = "DD/MM/YY">
 
 
-                    <label>date2:</label>
+                    <label>Date 2:</label>
                     <input type = "text" class = "form-control inlined-element" name="date2" placeholder = "DD/MM/YY">
 
 
-                    <label>rowsToFetch</label>
+                    <label>Rows returned</label>
                     <input type = "number" class = "form-control inlined-element" name="max" placeholder = "Enter rows" required>
+
+                    <label>Display type</label>
+                    <label class="radio-inline"><input type="radio" id="list-radio" name="display" value="list" checked> List</label>
+                    <label class="radio-inline"><input type="radio" id="grid-radio" name="display" value="grid"> Grid</label><br>
 
                     <input type="submit" class = "btn btn-default" value="getJson">
             </form>
@@ -55,11 +60,27 @@
                                 success:function(response)
                                 {
                                     //   $(".col-md-6").append(JSON.stringify(response,null,3));
-                                    $(".col-md-6").wrapInner('<textarea>'+JSON.stringify(response,null,3)+'</textarea>');
+                                    $(".col-md-12.target-append").empty();
+                                    if( $("#list-radio").is(":checked") ){
+                                        for(var i=0; i<response.length; i++){
+                                            $(".col-md-12.target-append").append('<div class="col-md-12"><textarea class="json-append" disabled>'+JSON.stringify(response[i],null,3)+'</textarea></div>');
+                                        }
+                                    } else {
+                                        for(var i=0; i<response.length; i++){
+                                            if(i%3 === 0){
+                                                $(".col-md-12.target-append").append('<div class="row">');
+                                            }
+                                            $(".col-md-12.target-append").append('<div class="col-md-4"><textarea class="json-append" disabled>'+JSON.stringify(response[i],null,3)+'</textarea></div>');
+                                            if((i+1)%3 === 0 || i+1 === response.length){
+                                                $(".col-md-12.target-append").append('</div>');
+                                            }
+                                        }
+                                    }
                                 },
                                 error: function(jqXHR, textStatus, errorThrown)
                                 {
                                     //handle error
+                                    $(".col-md-12.target-append").empty();
                                 }
                             });
                     e.preventDefault();	//STOP default action
@@ -68,7 +89,7 @@
         </div>
         <div class="form-horizontal">
             <div class="form-group">
-                <div class="col-md-6">
+                <div class="col-md-12 target-append">
 
                 </div>
             </div>
