--- a/views/templates/scripttemplate.ejs
+++ b/views/templates/scripttemplate.ejs
@@ -1,5 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<!-- <script src="javascripts/jquery.min.js"></script> -->
+<!-- <script src="/public/javascripts/jquery.min.js"></script> -->
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
